k8s/ingress-backend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-backend
  namespace: exam
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mehdi-aseds-ine2-exam-backend.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
  ingressClassName: "nginx"
